--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,7 @@
 [deps]
+AxisArrays = "39de3d68-74b9-583c-8d2d-e117c070f3a9"
 Calculus = "49dc2e85-a5d0-5ad3-a950-438e2897f1b9"
+Dolo = "9d24351c-2990-5e1b-a277-04c4b809c898"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
