--- a/Project.toml
+++ b/Project.toml
@@ -2,8 +2,11 @@
 AxisArrays = "39de3d68-74b9-583c-8d2d-e117c070f3a9"
 Calculus = "49dc2e85-a5d0-5ad3-a950-438e2897f1b9"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DiffResults = "163ba53b-c6d8-5494-b064-1a9d43ac40c5"
 Dolo = "9d24351c-2990-5e1b-a277-04c4b809c898"
+FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+SimplePlots = "307c2aad-90be-4152-b348-f51955fac6ce"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
