--- a/notebooks/rbc.yaml
+++ b/notebooks/rbc.yaml
@@ -7,11 +7,11 @@ symbols:
    controls: [n, i]
    parameters: [beta, sigma, eta, chi, delta, alpha, rho, zbar, sig_z]
 
-definitions:
-    y: exp(z[t])*k[t]^alpha*n[t]^(1-alpha)
-    c: y[t] - i[t]
-    rk: alpha*y[t]/ k[t]
-    w: (1-alpha)*y[t]/n[t]
+definitions: |
+    y = exp(z[t])*k[t]^alpha*n[t]^(1-alpha)
+    c = y[t] - i[t]
+    rk = alpha*y[t]/ k[t]
+    w = (1-alpha)*y[t]/n[t]
 
 equations:
 
