--- a/notebooks/rbc.yaml
+++ b/notebooks/rbc.yaml
@@ -8,10 +8,10 @@ symbols:
    parameters: [beta, sigma, eta, chi, delta, alpha, rho, zbar, sig_z]
 
 definitions: |
-    y = exp(z[t])*k[t]^alpha*n[t]^(1-alpha)
-    c = y[t] - i[t]
-    rk = alpha*y[t]/ k[t]
-    w = (1-alpha)*y[t]/n[t]
+    y[t] = exp(z[t])*k[t]^alpha*n[t]^(1-alpha)
+    c[t] = y[t] - i[t]
+    rk[t] = alpha*y[t]/ k[t]
+    w[t] = (1-alpha)*y[t]/n[t]
 
 equations:
 
