--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,7 @@ website:
             - slides/session_1/index.qmd
             - slides/session_2/index.qmd
             - slides/session_3/index.qmd
+            - slides/session_4/index.qmd
             - slides/ddp.qmd
             - slides/discretization.qmd
             - slides/optimization.qmd
@@ -26,13 +27,12 @@ website:
             - tutorials/1_Julia_Basics.ipynb
             - tutorials/2_solow.ipynb
             - tutorials/3_perturbation_neoclassical.ipynb
-            # - notebooks/2_solow_correction.ipynb
-            # - notebooks/7_Optimization_correction.ipynb
-            # - notebooks/8_smooth_vfi.ipynb
+            - tutorials/4_Optimization.ipynb
         
         - section: "Pushups"
           contents:
             - pushups/1_epidemiology.ipynb
+            - pushups/2_Optimization_pushups.ipynb
   
 format:
   html:
