--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,7 +18,6 @@ website:
             - slides/session_4/index.qmd
             - slides/ddp.qmd
             - slides/discretization.qmd
-            - slides/optimization.qmd
             - slides/interpolation.qmd
             - slides/time_iteration.qmd
 
@@ -28,11 +27,18 @@ website:
             - tutorials/2_solow.ipynb
             - tutorials/3_perturbation_neoclassical.ipynb
             - tutorials/4_Optimization.ipynb
+            - tutorials/6_discrete_dynamic_programming.ipynb
+            - tutorials/6_discrete_dynamic_programming_mccall.ipynb
         
         - section: "Pushups"
           contents:
             - pushups/1_epidemiology.ipynb
             - pushups/2_Optimization_pushups.ipynb
+            - pushups/Exam_mie37_2023.ipynb
+
+        - section: "Graded"
+          contents:
+            - homework/2024/Coursework_mie37_2024.ipynb0
   
 format:
   html:
